--- a/.github/workflows/weekly-python.yml
+++ b/.github/workflows/weekly-python.yml
@@ -1,9 +1,9 @@
-name: Weekly Python Job
+name: Automatically update course data
 
 on:
   schedule:
     # 每週一次：UTC 星期日 00:00（可依需求調整 cron）
-    - cron: '0 0 * * 0'
+    - cron: '0 0 * * *'
   workflow_dispatch: {}
 
 jobs:
