feat: Display last update time

--- a/.github/workflows/weekly-python.yml
+++ b/.github/workflows/weekly-python.yml
@@ -2,8 +2,8 @@ name: Automatically update course data
 
 on:
   schedule:
-    # 每週一次：UTC 星期日 00:00（可依需求調整 cron）
-    - cron: '0 0 * * *'
+    # 每日更新：UTC 16:00 (對應台北時間 00:00)
+    - cron: '0 16 * * *'
   workflow_dispatch: {}
 
 jobs:
