feat: Update schedule

--- a/.github/workflows/weekly-python.yml
+++ b/.github/workflows/weekly-python.yml
@@ -2,8 +2,15 @@ name: Automatically update course data
 
 on:
   schedule:
-    # 每日更新：UTC 16:00 (對應台北時間 00:00)
-    - cron: '0 16 */3 * *'
+    # 11, 12, 1, 2 月：每天台北時間 00:00 (UTC 16:00) 更新
+    - cron: '0 16 * 1,2,11,12 *'
+    
+    # 6, 7, 8, 9 月：每天台北時間 00:00 (UTC 16:00) 更新
+    - cron: '0 16 * 6,7,8,9 *'
+    
+    # 3, 4, 5, 10 月：每週一台北時間 00:00 (UTC 16:00) 更新
+    - cron: '0 16 * 3,4,5,10 1'
+  
   workflow_dispatch: {}
 
 jobs:
